[package]
name = "yew-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gloo-console = "0.3"
gloo-net = { version = "0.2", features = ["websocket"] }
plotters = { version = "0.3" }
serde_json = { version="1.0" }
serde = { version="1.0", features=["derive"] }
wasm-bindgen-futures = "0.4"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
