[package]
name = "webui-hostside-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
web-temperature-plots = { path = ".." }

futures = { version="0.3" }
serde_json = { version="1.0" }
serde = { version="1.0" }
tokio-serde = { version = "0.9", features=["json"] }
tokio-util = { version = "0.7", features=["codec"] }
tokio = { version="1.40", features=["full"] }
tokio-websockets = { version = "0.10", features = ["server", "native-tls", "openssl"] }
thiserror = "1.0"
